--- a/src/index.html
+++ b/src/index.html
@@ -28,12 +28,12 @@
                 <li class="card-img" data-id="discover">
                     <img src="https://findicons.com/files/icons/2102/credit_card_debit_card/101/discover_straight.png" alt="discover">
                 </li>
-                <li class="card-img" data-id="western union">
+                <li class="card-img" data-id="unionpay">
                     <img src="https://findicons.com/files/icons/2395/credit_card_debit_card_and_payment_icons/102/western_union_curved_64px.png" alt="diners">
                 </li>
             </ul>
             <input class="widget-input" id="num-card-input" data-id="num-card-input" type="text" placeholder="Credit card number">
-            <button data-id="num-card-submit">Click to Validate</button>
+            <button id="num-card-submit" type="button">Click to Validate</button>
         </div>
         
     </form>
