--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <!-- TODO: comment after component added -->
+    <div class="container">
     <form class="widget" data-widget="number-card-form-widget">
         <div class="form-control">
             <ul class="cards-image">
@@ -29,7 +30,7 @@
                     <img src="https://findicons.com/files/icons/2102/credit_card_debit_card/101/discover_straight.png" alt="discover">
                 </li>
                 <li class="card-img" data-id="unionpay">
-                    <img src="https://findicons.com/files/icons/2395/credit_card_debit_card_and_payment_icons/102/western_union_curved_64px.png" alt="diners">
+                    <img src="https://findicons.com/files/icons/2814/payment_system_icons/120/unionpay.png" alt="diners">
                 </li>
             </ul>
             <input class="widget-input" id="num-card-input" data-id="num-card-input" type="text" placeholder="Credit card number">
@@ -37,6 +38,7 @@
         </div>
         
     </form>
+    </div>
 </body>
 
 </html>
